--- a/ios/Cakto/SplashScreen.storyboard
+++ b/ios/Cakto/SplashScreen.storyboard
@@ -39,6 +39,7 @@
                         <color key="backgroundColor" name="SplashScreenBackground"/>
                         <color key="backgroundColor" name="SplashScreenBackground"/>
                         <color key="backgroundColor" name="SplashScreenBackground"/>
+                        <color key="backgroundColor" name="SplashScreenBackground"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EXPO-PLACEHOLDER-1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -48,6 +49,9 @@
     </scenes>
     <resources>
         <image name="SplashScreenLogo" width="414" height="736"/>
+        <namedColor name="SplashScreenBackground">
+            <color alpha="1.000" blue="0.407843137254902" green="0.631372549019608" red="0.00000000000000" customColorSpace="sRGB" colorSpace="custom"/>
+        </namedColor>
         <namedColor name="SplashScreenBackground">
             <color alpha="1.000" blue="0.407843137254902" green="0.631372549019608" red="0.00000000000000" customColorSpace="sRGB" colorSpace="custom"/>
         </namedColor>
